--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ python-dotenv==1.0.0
 cachetools==5.3.1
 pydantic==1.10.13
 ujson==5.7.0
-pandas==2.2.3
+multidict==6.0.4
+yarl==1.9.4
+frozenlist==1.4.0
+pandas==2.2.2
